fix layout bug in a little screen and change footer and developers card colors

--- a/css/base.css
+++ b/css/base.css
@@ -39,14 +39,15 @@ footer {
 
 .input-data {
   display: flex;
-  border: .1rem solid #555555;
+  border: 1.5px solid #555555;
   border-radius: 3px;
   height: 3rem;
-  font-size: 1rem;
+  font-size: .85rem;
+  padding: 2px;
 }
 .input-data.lg {
   height: 5rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 .input-data label {
   margin: 0 .5rem;
@@ -72,6 +73,7 @@ footer {
 .input-data button {
   border: none;
   border-left: .1rem solid #555555;
+  border-radius: 0 2px 2px 0;
   color: #555555;
   height: 100%;
   background-color: transparent;
@@ -149,5 +151,15 @@ footer {
   .grid-16 {
     flex: 0 0 calc(100% - .25rem);
     max-width: 0 0 calc(100% - .25rem);
+  }
+  .input-data {
+    border: .1rem solid #555555;
+    font-size: 1rem;
+  }
+  .input-data input {
+    flex-grow: 1;
+  }
+  .input-data.lg {
+    font-size: 2rem;
   }
 }
