--- a/css/developers.css
+++ b/css/developers.css
@@ -2,32 +2,38 @@
   padding: 1rem 1rem;
   color: #555555;
 }
+
 .dev {
   margin-bottom: 1rem;
   border-radius: 5px;
-  height: 20.5rem;
-  border: .25rem solid #FFE08A;
+  height: auto;
+  border: .25rem solid #555555;
 }
+
 .dev-photo {
-  background-color: #FFE08A;
+  background-color: #555555;
   align-items: center;
   width: 100%;
   height: 10rem;
   padding: 1rem;
   text-align: center;
 }
+
 .dev-img {
-  border: 3px solid #e0c26d;
+  border: 3px solid #2c2c2c;
   width: 8rem;
   border-radius: 50%;
 }
-.dev-info{
+
+.dev-info {
   height: 100%;
 }
+
 .dev-info .dev-description {
   padding: .5rem;
   height: calc(100% - 13rem);
 }
+
 .dev-description h1 {
   font-family: 'Playfair Display', serif;
   font-size: 2rem;
@@ -35,31 +41,38 @@
   margin-bottom: 1.5rem;
   text-align: center;
 }
+
 .dev-description p {
   font-size: 1rem;
   letter-spacing: .1rem;
   line-height: 1.5rem;
 }
+
 .dev-social {
   height: 3rem;
 }
+
 .social-icons {
   display: flex;
   justify-content: center;
 }
+
 .social-icons ul {
   height: 3rem;
 }
+
 .social-icons li {
   height: 3rem;
   padding: .5rem;
   text-align: center;
 }
+
 .social-icons img {
   width: 2rem;
   height: 2rem;
 }
-@media(min-width: 960px){
+
+@media(min-width: 960px) {
   .desenvolvedores-area {
     padding: 1rem 0;
   }
@@ -75,8 +88,7 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
-    border: 3px solid #e0c26d;
-    width: 8rem;
+    width: 10rem;
     border-radius: 50%;
   }
   .dev-info {
